reduce pills scroll mask fade from 20px to 8px to avoid clipping first pill at rest

--- a/src/index.css
+++ b/src/index.css
@@ -7377,8 +7377,8 @@ input[type="checkbox"].ios-toggle:checked::after {
   margin-bottom: -8px;
   padding-right: 8px;
   /* Fade pills out on the left as they scroll behind the circle button */
-  -webkit-mask-image: linear-gradient(to right, transparent 0px, black 20px);
-  mask-image: linear-gradient(to right, transparent 0px, black 20px);
+  -webkit-mask-image: linear-gradient(to right, transparent 0px, black 8px);
+  mask-image: linear-gradient(to right, transparent 0px, black 8px);
 }
 
 .ev-ios-pills-scroll::-webkit-scrollbar {
